<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical">          
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <ImageButton 
    android:id="@+id/imgbtn_comeback"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:background="#00000000"
    android:src="@drawable/imgbtn_comeback_left"
    android:contentDescription="@null"/>
   <TextView 
    android:id="@+id/tv_title"  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_vertical"
    android:textColor="#ffffff"
    android:textSize="20sp"
    android:text="@string/setting"/>
   <Button 
    android:id="@+id/btn_save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_alignParentRight="true"
    android:gravity="center_vertical"
    android:layout_marginRight="5dip"
    android:padding="5dip" 
    android:textColor="#ffffff"
    android:textSize="15sp"
    android:text="@string/save"
    android:background="@drawable/style_button_alpha"/>
   </RelativeLayout>    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>   
   <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">      
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">  
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dip"
    android:textColor="#00ff80"
    android:textSize="15sp"
    android:text="@string/startsetting"/>  
   </LinearLayout>   
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/> 
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
   <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:paddingLeft="5dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:text="@string/startsettingplaying"
    android:textSize="18sp"
    android:textColor="#ffffffff"
    android:gravity="center_vertical"/> 
   <am.android.view.CheckImageView 
    xmlns:am="http://schemas.android.com/apk/res/am.android.minimusicplayer"
    android:id="@+id/civ_startplaying"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="5dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    am:checked="false" /> 
   </RelativeLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">  
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dip"
    android:textColor="#00ff80"
    android:textSize="15sp"
    android:text="@string/themesetting"/>  
   </LinearLayout>
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/>
   <RadioGroup 
    android:id="@+id/rg_themesetting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_menu"
    android:showDividers="middle"
    android:orientation="vertical"> 
   <RadioButton 
    android:id="@+id/rb_theme_original"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/theme_original"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_theme_classical"  
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/theme_classical"
    android:background="@drawable/style_item"/> 
   <RadioButton 
    android:id="@+id/rb_theme_refresh"  
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/theme_refresh"
    android:background="@drawable/style_item"/> 
   <RadioButton 
    android:id="@+id/rb_theme_blackcool"  
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/theme_blackcool"
    android:background="@drawable/style_item"/> 
   </RadioGroup> 
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">  
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dip"
    android:textColor="#00ff80"
    android:textSize="15sp"
    android:text="@string/playmode"/>  
   </LinearLayout> 
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/> 
   <RadioGroup 
    android:id="@+id/rg_playmode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_menu"
    android:showDividers="middle"
    android:orientation="vertical"> 
   <RadioButton 
    android:id="@+id/rb_singleplay"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/singleplay"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_singlecycle"  
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/singlecycle"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_allplay"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/allplay"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_allcycle"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/allcycle"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_shuffle"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/shuffle"
    android:background="@drawable/style_item"/>  
   </RadioGroup> 
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dip"
    android:layout_marginBottom="50dip">
   <Button 
    android:id="@+id/btn_exit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:background="@drawable/style_button_circle_red"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/exitmini"/>
   <Button 
    android:id="@+id/btn_backtowindows"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:background="@drawable/style_button_circle_green"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/backtowindows"/>
   </LinearLayout> 
   </LinearLayout>   
   </ScrollView>    
</LinearLayout>