<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/style_border"
    android:orientation="vertical">   
   <LinearLayout 
    android:id="@+id/layout_dialog_positionmusic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/style_border_alpha">       
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dip"
    android:drawableLeft="@drawable/dialog_positionmusic"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:text="@string/positionmusic"/>              
   </LinearLayout>    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/> 
   <LinearLayout 
    android:id="@+id/layout_dialog_refreshplaylist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_border_alpha"
    android:orientation="vertical">       
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dip"
    android:drawableLeft="@drawable/dialog_refreshplaylist"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:text="@string/refreshplaylist"/>              
   </LinearLayout>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/> 
   <LinearLayout 
    android:id="@+id/layout_dialog_changemusic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_border_alpha"
    android:orientation="vertical">       
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dip"
    android:drawableLeft="@drawable/dialog_changemusic"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:text="@string/changemusic"/>              
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/>  
   <LinearLayout 
    android:id="@+id/layout_dialog_changetheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_border_alpha"
    android:orientation="vertical">       
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dip"
    android:drawableLeft="@drawable/dialog_theme"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:text="@string/changetheme"/>              
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/> 
   <LinearLayout 
    android:id="@+id/layout_dialog_cancel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_border_alpha"
    android:orientation="vertical">       
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dip"
    android:drawableLeft="@drawable/dialog_cancel"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:text="@string/cancel"/>              
   </LinearLayout>
</LinearLayout>