<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/style_border"
    android:orientation="vertical">    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:text="@string/deletemusic"/>    
   </LinearLayout>    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dip">
   <TextView 
    android:id="@+id/tv_infor_delete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:singleLine="false"
    android:padding="10dip"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:background="@drawable/style_border"/>    
   </LinearLayout>   
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <CheckBox 
    android:id="@+id/cb_delete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checked="false"
    android:text="@string/deletemusicfile"  
    android:textSize="20sp"
    android:paddingLeft="18dip"
    android:layout_marginLeft="30dip"/>
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:layout_marginTop="10dip"
    android:background="#ffffff"/>       
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip"
    android:orientation="horizontal"> 
   <TextView 
    android:id="@+id/tv_dialog_ok"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:padding="10dip"
    android:layout_gravity="center"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="5dip"
    android:textColor="#ffffffff"
    android:textSize="20sp"
    android:text="@string/delete"
    android:background="@drawable/style_button_rectangle_yellow"/>   
   <TextView 
    android:id="@+id/tv_dialog_cancel"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:padding="10dip"
    android:layout_gravity="center"
    android:layout_marginLeft="5dip"
    android:layout_marginRight="10dip"
    android:textColor="#ffffffff"
    android:textSize="20sp"  
    android:text="@string/cancel"
    android:background="@drawable/style_button_rectangle_green"/>     
   </LinearLayout>        
</LinearLayout>