<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">  
   <TextView 
    android:id="@+id/tv_currentmode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:gravity="center"
    android:layout_marginTop="20dip"
    android:text="@string/currentmode"
    android:textColor="#ffffff"
    android:textSize="24sp"
    android:background="@drawable/style_item"/> 
   <TextView 
    android:id="@+id/tv_currentsong"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:layout_marginTop="20dip"
    android:layout_below="@+id/tv_currentmode"
    android:text="@string/playing"
    android:textColor="#0080ff"
    android:textSize="24sp"
    android:background="@drawable/style_border_alpha2"/> 
   <LinearLayout 
    android:id="@+id/layout_control_seekbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/layout_panel"
    android:orientation="vertical"
    android:background="#40ffffff"> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dip"
    android:orientation="horizontal"> 
   <TextView 
    android:id="@+id/tv_currentvolume"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:textColor="#0080ff"
    android:textSize="24sp"
    android:text="@string/volume"/>  
   <SeekBar
    android:id="@+id/volumeProgressBar"
    android:progressDrawable="@drawable/style_seekbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"/>
   </LinearLayout>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dip"
    android:orientation="horizontal">  
   <TextView 
    android:id="@+id/tv_currentProgress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:textColor="#0080ff"
    android:textSize="24sp"
    android:text="@string/progress"/>
   <SeekBar
    android:id="@+id/progressProgressBar"
    android:progressDrawable="@drawable/style_seekbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"/>
   </LinearLayout> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dip"
    android:orientation="horizontal">
   <TextView 
    android:id="@+id/tv_time_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="left"
    android:paddingLeft="10dip"
    android:textColor="#000000"
    android:textSize="20sp"/>
   <TextView 
    android:id="@+id/tv_time_end"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:paddingRight="10dip"
    android:layout_weight="1"
    android:textColor="#000000"
    android:textSize="20sp"/>
   </LinearLayout>     
   </LinearLayout>
   <LinearLayout 
    android:id="@+id/layout_panel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true">   
   <ImageButton 
    android:id="@+id/imgbtn_play_previous"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#0000"
    android:scaleType="fitEnd"
    android:contentDescription="@null"
    android:src="@drawable/imgbtn_play_previous"/>
   <ImageButton 
    android:id="@+id/imgbtn_play_pause"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#0000"
    android:scaleType="fitEnd"
    android:contentDescription="@null"
    android:src="@drawable/imgbtn_play_pause_b"/> 
   <ImageButton 
    android:id="@+id/imgbtn_play_mode"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#0000"
    android:scaleType="fitEnd"
    android:contentDescription="@null"
    android:src="@drawable/imgbtn_mini"/> 
   <ImageButton 
    android:id="@+id/imgbtn_play_play"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#0000"
    android:scaleType="fitEnd"
    android:contentDescription="@null"
    android:src="@drawable/imgbtn_play_play_b"/>   
   <ImageButton 
    android:id="@+id/imgbtn_play_next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#0000"
    android:scaleType="fitEnd"
    android:contentDescription="@null"
    android:src="@drawable/imgbtn_play_next"/>   
   </LinearLayout> 
</RelativeLayout>